buy stuff went into buy folder. this will change, but pushin for now

--- a/RoomMe/app/src/main/AndroidManifest.xml
+++ b/RoomMe/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BuyActivity"
+            android:name=".buy.BuyActivity"
             android:label="BuyActivity"
             android:theme="@style/BuyTheme" />
     </application>
