--- a/RoomMe/app/build.gradle
+++ b/RoomMe/app/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
-    testCompile 'junit:junit:4.12'
     compile 'com.joanzapata.iconify:android-iconify:2.2.2'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
+    compile 'org.kie.modules:com-google-code-gson:6.5.0.Final'
+    testCompile 'junit:junit:4.12'
 }
