--- a/RoomMe/app/src/main/AndroidManifest.xml
+++ b/RoomMe/app/src/main/AndroidManifest.xml
@@ -20,15 +20,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".buy.BuyActivity"
-            android:label="RoomMe"
-            android:screenOrientation="portrait"
-            android:theme="@style/BuyTheme" />
-        <activity
             android:theme="@style/BuyTheme"
             android:label="RoomMe"
             android:screenOrientation="portrait"
             android:name=".buy.ContractActivity" />
+        <activity
+            android:name=".main.MainActivity"
+            android:label="RoomMe"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/BuyTheme" />
     </application>
 
 </manifest>
