--- a/RoomMe/app/src/main/AndroidManifest.xml
+++ b/RoomMe/app/src/main/AndroidManifest.xml
@@ -4,13 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_launcher_round"
         android:supportsRtl="true">
         <activity
             android:name=".login.LoginActivity"
-            android:label="LoginActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,13 +20,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/BuyTheme"
-            android:label="RoomMe"
-            android:screenOrientation="portrait"
-            android:name=".buy.ContractActivity" />
-        <activity
             android:name=".main.MainActivity"
-            android:label="RoomMe"
+            android:label=""
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/BuyTheme" />
