--- a/RoomMe/app/src/main/AndroidManifest.xml
+++ b/RoomMe/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.brandonderbidge.myapplication">
 
+    <service android:name=".MyFirebaseInstanceIDService">
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+        </intent-filter>
+    </service>
+    <service android:name=".MyFirebaseMessagingService">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_launcher"
@@ -20,16 +31,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/BuyTheme"
+            android:name=".buy.ContractActivity"
             android:label=""
             android:screenOrientation="portrait"
-            android:name=".buy.ContractActivity" />
+            android:theme="@style/BuyTheme" />
         <activity
             android:name=".main.MainActivity"
             android:label=""
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/BuyTheme" />
+            android:theme="@style/BuyTheme"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".login.RegisterActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
