--- a/RoomMe/app/build.gradle
+++ b/RoomMe/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
     testCompile 'junit:junit:4.12'
-    apply plugin: 'com.google.gms.google-services'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    compile 'com.firebaseui:firebase-ui-storage:0.6.0'
 }
 
 
