--- a/RoomMe/app/build.gradle
+++ b/RoomMe/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.brandonderbidge.myapplication"
         minSdkVersion 21
         targetSdkVersion 26
@@ -42,6 +43,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     compile 'com.firebaseui:firebase-ui-storage:0.6.0'
+    compile 'com.android.support:multidex:1.0.0'
 }
 
 
