--- a/RoomMe/app/src/main/AndroidManifest.xml
+++ b/RoomMe/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+
+    <meta-data
+        android:name="my.app.namespace.utils.GlideConfiguration"
+        android:value="GlideModule" />
 
     <application
         android:allowBackup="true"
@@ -30,7 +33,8 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>s
+            </intent-filter>
+            s
         </activity>
         <activity
             android:name=".buy.ContractActivity"
@@ -52,10 +56,8 @@
             android:name=".login.ForgotPasswordActivity"
             android:label="@string/title_activity_forgot_password"
             android:screenOrientation="portrait"
-            android:theme="@style/BuyTheme"/>
+            android:theme="@style/BuyTheme" />
+        <activity android:name=".profile.EditProfile"></activity>
     </application>
-
-    <meta-data android:name="my.app.namespace.utils.GlideConfiguration"
-        android:value="GlideModule"/>
 
 </manifest>
