--- a/RoomMe/app/build.gradle
+++ b/RoomMe/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support:multidex:1.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 
